<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scanbar"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_scanbar" />

    <item
        android:id="@+id/navigation_medicinas"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_medicinas" />

    <item
        android:id="@+id/navigation_avisos_salientes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_avisos_salientes" />
    <item
        android:id="@+id/navigation_avisos_entrantes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_avisos_entrantes" />

</menu>
