<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cuestionario"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:text="@string/lunes"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/martes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/miercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:layout_weight="1" />

        <CheckBox
        android:text="@string/jueves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox4"
        android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:text="@string/viernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox5"
            android:layout_weight="20" />

        <CheckBox
            android:text="@string/sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox6"
            android:layout_weight="20" />

        <CheckBox
            android:text="@string/domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox7"
            android:layout_weight="20" />
        <CheckBox
            android:text="@string/todos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox8"
            android:layout_weight="20" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Horas">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HorasInsertadas"
            android:orientation="vertical">
            <TextView
                android:id="@+id/HorasInsertadasTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>
        <ListView
            android:id="@+id/lista2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="0dp">
        </ListView>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:id="@+id/hora"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|end">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:gravity="start|bottom"
            android:id="@+id/bCancelar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end|bottom"
            android:text="@string/guardar"
            android:id="@+id/bGuardar"/>

    </LinearLayout>
</LinearLayout>